# aiogram-bot-template

./: .env.sample  .gitignore  Dockerfile  LICENSE  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test.py
bot/filters/: admin.py
bot/functions/: admin.py
bot/handlers/: __init__.py
bot/handlers/admin/: __init__.py  admin_manager.py  start.py
bot/text/: admin.py
database/: connection.py
database/models/: admin.py  base.py  user.py
logs/: .gitignore  IMPORTANT.txt
src/: config.py  database.py  filters.py  main.py  models.py  text.py  utils.py
src/admin/: __init__.py  callbacks.py  filters.py  models.py  router.py  states.py  text.py  text.yml  utils.py
src/admin/admin_manager/: handlers.py  router.py  text.py  text.yml  utils.py
src/admin/panel/: router.py
src/admin/start/: handlers.py
src/user/: __init__.py  models.py
src/utils/: __init__.py  logger.py  telegram.py  text.py
utilits/: supportive_function.py
